<resources>
    <string name="app_name">Moodlight</string>
    <string name="Button_Led">Colorsettings</string>
    <string name="Button_Alarm">Alarmsettings</string>
    <string name="Button_Bluetooth">Connect</string>
    <string name="Button_TimePicker">Edit</string>
    <string name="Text_Red">Red</string>
    <string name="Text_Green">Green</string>
    <string name="Text_Blue">Blue</string>
    <string name="Text_White">White</string>
    <string name="Text_Value">Color</string>
    <string name="Text_Commit">Commit</string>
    <string name="Text_Time">Alarm Time</string>
    <string name="Button_Secret">super secret!</string>
</resources>
